Consent: Specify consent resources for FDPG project data extraction (#851)
Closes #851
Closes #873
Closes #874
Closes #875
Closes #876